<resources>
    <string name="app_name">Repaso004</string>
    <string name="title">Ingreso al sistema</string>
    <string name="editText_Usuario">Usuario</string>
    <string name="editText_clave">Contraseña</string>
    <string name="btn_Enviar">Ingresar</string>
    <string name="user_contend">ingreso de usuario</string>
    <string name="descriptionClave">ingreso clave</string>
    <string name="btn_Visualizar">Visualizar</string>
    <string name="menu_acercade">Acerca de</string>

</resources>